# stm32f4_setup

./: CMakeLists.txt  STM32F411VETX_FLASH.ld  build.sh  compiler_flags.txt  exec.elf  linkscript.ld  startup.c  startup.elf  startup.map  startup.su
cmake/: arm_toolchain.cmake  board_options.cmake  build_type.cmake  debug_options.cmake  generic_options.cmake  unit_test.cmake
info/: disassembly  exec.map  sections
src/: CMakeLists.txt  main.c
src/chip_definitions/: CMakeLists.txt  stm32f411xe.h
src/clock/: clock.h
src/gpio/: CMakeLists.txt  gpio.c  gpio.h
src/usart/: CMakeLists.txt  usart.c  usart.h
test/: CMakeLists.txt  uart_test.cpp
tools/: linkscript.ld
